# uke-chord-trainer

./: Cargo.toml  README.md  index.html
.github/: dependabot.yml
.github/workflows/: build.yaml
assets/css/: index.scss
assets/img/: logo.xcf
src/: bindings.rs  main.rs  play.js
