[package]
name = "uke-chord-trainer"
version = "0.1.1"
edition = "2018"
rust-version = "1.55"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
js-sys = "0.3"
arraymap = "0.1"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
gloo-timers = "0.3.0"
gloo-console = "0.3.0"
gloo-utils = "0.2.0"
