[package]
name = "uke-chord-trainer"
version = "0.1.1"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
js-sys = "0.3"
arraymap = "0.1"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
gloo-timers = "0.3.0"
gloo-console = "0.3.0"
gloo-utils = "0.2.0"
ukebox = { version = "0.9.2" }
tera = { version = "1" }
